# Regulatory-Table-Scraper

./: .gitignore  ARCHITECTURE.md  README.md  config.md  data_contracts.md  domain.md  implementation_plan.md  implementation_plan_2.md  issues_draft.md  project.md  pyproject.toml  requirements.txt  skeleton.md  software_architecture_design.md  walkthrough.md  workspace_and_artifacts.md
config/: defaults.yaml
config/catalogs/: charge_units.yaml  consumer_categories.yaml  state_aliases.yaml  states.yaml  utilities.yaml  voltage_levels.yaml
config/discovery/: parameter_aliases.yaml  toc_patterns.yaml
config/parsers/: registry.yaml
config/parsers/parameters/: additional_surcharge.yaml  banking_charges.yaml  cross_subsidy_surcharge.yaml  transmission_charge.yaml  wheeling_charge.yaml
config/patterns/: pattern_signatures.yaml
config/pdf_profiles/: cerc_ursi_v1.yaml
docs/: DEVELOPER_GUIDE.md  Regulatory_Parameter_Extraction_Pipeline_Documentation.md  cross_subsidy_surcharge_scraping_pipeline.md  issues.md  table_fetch (1).ipynb  table_scraping.ipynb
scratch/: inspect_cols.py  inspect_raw.py  test_du.py
scripts/: inspect_parameter.py  inspect_records.py  validate_workspace.py
src/table_scraper/: __init__.py
src/table_scraper/adapters/: __init__.py  excel_writer.py  pdf_reader.py
src/table_scraper/config/: __init__.py  loader.py  schema.py
src/table_scraper/discovery/: __init__.py  page_offset_calibrator.py  page_range_resolver.py  (+2 more)
tests/: __init__.py
tests/unit/: test_discovery.py  test_page_indexer.py  test_pdf_reader.py  test_title_detector.py
(+74 files in other folders)
